# gs690FunCode

./: README.md  download-cli.bat  eslint.config.mjs  next.config.ts  package-lock.json  package.json  protocol.proto  tailwind.config.ts  tsconfig.tsbuildinfo  upload-r2.js
.github/scripts/: upload-r2.js
.github/workflows/: build-tauri.yml  deploy.yml  test.yml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  excel.rs  main.rs  protocol.rs  serial.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/editor/: page.tsx
src/components/: BottomPanel.tsx  ClientApp.tsx  ConnectDialog.tsx  ContextMenu.tsx  FuncCodeEditor.tsx  FuncCodeTable.tsx  Header.tsx  OptionPopover.tsx  Overlays.tsx  RightPanel.tsx  StatusBar.tsx
src/components/ui/: badge.tsx  button.tsx  checkbox.tsx  dialog.tsx  input.tsx  label.tsx  scroll-area.tsx  select.tsx  sheet.tsx  table.tsx  tabs.tsx
src/data/: funcodes.json
src/hooks/: useTheme.ts
src/lib/: api.ts  constants.ts  types.ts  utils.ts
src/store/: index.ts
