[package]
name = "gs690-fun-code"
version = "1.0.0"
edition = "2021"
description = "GS690 功能码调试终端"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.13"
serialport = "4"
tokio = { version = "1", features = ["full"] }
calamine = "0.26"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.13"

[profile.release]
strip = true
lto = true
opt-level = "s"
